# Insurance-assessment

./: .gitignore  README.md  pyproject.toml
django_project/: settings.py  urls.py
shop/: models.py  serializers.py  urls.py  views.py
shop/migrations/: 0001_initial.py  0002_shop_user.py  0003_product.py
user/: managers.py  models.py  serializers.py  urls.py  views.py
user/migrations/: 0001_initial.py  0002_alter_customuser_managers.py  0003_alter_customuser_phone.py  0004_remove_customuser_username.py
